// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly no props 1`] = `
<div
  className="title-component "
>
  <div
    className="title-component__description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders correctly with className 1`] = `
<div
  className="title-component foo"
>
  <div
    className="title-component__description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders correctly with templateData & templateString 1`] = `
<div
  className="title-component "
>
  <div
    className="title-component__description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "My template string bar.",
      }
    }
  />
</div>
`;

exports[`renders correctly with templateData 1`] = `
<div
  className="title-component "
>
  <div
    className="title-component__description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders correctly with templateString 1`] = `
<div
  className="title-component "
>
  <div
    className="title-component__description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "My template string.",
      }
    }
  />
</div>
`;
